# toptal_calc

./: LICENSE  README.md  calc.cabal  requirements.txt
prog-src/: Main.hs
src/: Error.hs  ExprTree.hs  Math.hs  Parser.hs
src/Parser/: Lexer.hs  TinyParsec.hs
test/: Spec.hs
web/: calcweb.cabal  firebase.json
web/web-src/: Main.hs
