name:                calc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lisphacker/calc#readme
license:             BSD3
license-file:        LICENSE
author:              Gautham Ganapathy
maintainer:          gautham@lisphacker.org
copyright:           Gautham Ganapathy (gautham@lisphacker.org)
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable calc
  hs-source-dirs:      prog-src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lisphacker/calc
