name:                calc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lisphacker/toptal_calc#readme
license:             BSD3
license-file:        LICENSE
author:              Gautham Ganapathy
maintainer:          gautham@lisphacker.org
copyright:           Gautham Ganapathy (gautham@lisphacker.org)
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable calc
  hs-source-dirs:      prog-src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , calc

library
  hs-source-dirs:      src
  exposed-modules:     ExprTree, Parser, Math
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite math-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck >= 2.9.2
                     , base >= 4.7 && < 5
                     , calc
                     , hspec >= 2.4.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lisphacker/toptal_calc
